# Rundown

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.webapp  README.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
.github/workflows/: tests.yml
deploy/systemd/: garmin-backup-bot.service  garmin-backup-db.service  garmin-backup-db.timer  garmin-backup-webapp.service  garmin-dev-bot.service
docs/: garth-migration-spike.md
scripts/: backup_app_db.sh  broadcast.py  clean_user_memory.py  record_garth_fixtures.py  run_evals.py
src/garmin_backup_bot/: __init__.py  analyst.py  bot.py  bot_common.py  bot_food.py  bot_jobs.py  bot_memory.py  bot_payments.py  bot_profile.py  bot_qa.py  bot_races.py  bot_reports.py  bot_scale.py  coach.py  config.py  crypto.py  formatting.py  garmin_metrics.py  garmin_service.py  garmin_sync.py  main.py  nutrition.py  plan_builder.py  prompts.py  storage.py  tools.py  transcription.py  webapp.py  zepp_scale.py
tests/: test_body_composition.py  test_coach.py  test_formatting.py  test_garmin_fixtures.py  test_garmin_service.py  test_plan_builder.py  test_plan_intent.py  test_prompts.py  test_static.py  test_storage.py  test_tools.py  test_zepp_scale.py
tests/fixtures/garth/: activity_detail.json  activity_laps.json  activity_list.json  activity_zones.json  daily_stress.json  daily_summary.json  hrv.json  personal_info.json  sleep.json  social_profile.json  weight.json
